--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -40,7 +40,7 @@
                         {
                             <!-- User is signed in -->
                             <li class="nav-item">
-                                <a class="nav-link text-dark" asp-controller="Home" asp-action="Profile">
+                                <a class="nav-link text-dark" asp-controller="Account" asp-action="EditProfile">
                                     <i class="fas fa-user me-1"></i>@User.Identity.Name
                                 </a>
                             </li>
