--- a/Views/Car/Offer.cshtml
+++ b/Views/Car/Offer.cshtml
@@ -58,9 +58,23 @@
 
                 <div class="form-field">
                     <label asp-for="Mileage" class="control-label"></label>
-                    <input asp-for="Mileage" class="form-input small-input" required min="0" />
+                    @if (User.IsInRole("Admin"))
+                    {
+                        <input asp-for="Mileage" class="form-input small-input" value="0" readonly />
+                        <small class="text-muted">As an admin, mileage is automatically set to 0.</small>
+                    }
+                    else if (User.IsInRole("Client"))
+                    {
+                        <input asp-for="Mileage" class="form-input small-input" required min="5000" />
+                        <small class="text-muted">As a client, mileage must be 5000 or less.</small>
+                    }
+                    else
+                    {
+                        <input asp-for="Mileage" class="form-input small-input" required min="0" />
+                    }
                     <span asp-validation-for="Mileage" class="text-danger"></span>
                 </div>
+
 
                 <div class="form-field">
                     <label asp-for="Price" class="control-label"></label>
