--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -34,6 +34,10 @@
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Car" asp-action="Offer">Offer Your Car</a>
                         </li>
+                        <li class="nav-item">
+                            <a class="nav-link" asp-controller="Car" asp-action="MyListings">My Dashboard</a>
+                        </li>
+
                     </ul>
                     <ul class="navbar-nav">
                         @if (User.Identity.IsAuthenticated)
