--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -34,9 +34,6 @@
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Car" asp-action="Offer">Offer Your Car</a>
                         </li>
-                        <li class="nav-item">
-                            <a class="nav-link" asp-controller="Car" asp-action="MyListings">My Dashboard</a>
-                        </li>
 
                     </ul>
                     <ul class="navbar-nav">
@@ -123,7 +120,9 @@
     <!-- Floating Menu - FIXED STRUCTURE -->
     <div id="floatingMenu" class="floating-menu">
         <ul>
-            <li><a asp-controller="Home" asp-action="Profile">Profile</a></li>
+            <li><a asp-controller="Car" asp-action="MyListings">My Dashboard</a></li>
+             <li><a asp-controller="Car" asp-action="Favorites">My Favorite</a></li>
+            <li><a asp-controller="Home" asp-action="Reviews">Reviews</a></li>
             <li><a asp-controller="Home" asp-action="About">About</a></li>
             <li><a asp-controller="Home" asp-action="Privacy">Privacy</a></li>
         </ul>
